# text-editor

./: .gitignore  CMakeLists.txt  CMakePresets.json
dependencies/: CMakeLists.txt
dependencies/FreeType/: CMakeLists.txt
dependencies/SDL/: CMakeLists.txt
text-editor/: Application.cpp  Application.hpp  CMakeLists.txt  EntryPoint.cpp  FontLoader.cpp  FontLoader.hpp  main.cpp
text-editor/data-types/: CMakeLists.txt  DataTypes.hpp
text-editor/renderer/: Bitmap.cpp  Bitmap.hpp  CMakeLists.txt  DrawFunctions.cpp  DrawFunctions.hpp  Font.hpp  Framebuffer.cpp  Framebuffer.hpp  Renderer.cpp  Renderer.hpp
